@@ -1,6 +1,6 @@
  The MIT License (MIT)
 
- Copyright (c) 2014-2018 Anthon van der Neut, Ruamel bvba
+ Copyright (c) 2014-2019 Anthon van der Neut, Ruamel bvba
 
  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the "Software"), to deal
