@@ -1,3 +1,6 @@
+[0, 15, 83]: 2019-01-02
+  - fix for bug in roundtripping aliases used as key (reported via email by Zaloo)
+
 [0, 15, 82]: 2018-12-28
   - anchors and aliases on scalar int, float, string and bool are now preserved. Anchors
     do not need a referring alias for these (reported by 
